--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "d3": "^7.4.4",
     "firebase": "^9.8.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/d3": "^7.4.0"
+    "@types/d3": "^7.4.0",
+    "@types/redux-logger": "^3.0.9"
   }
 }
