--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "d3": "^7.4.4",
+    "faker": "^6.6.6",
     "firebase": "^9.8.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
