--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@types/react-dom": "^18.0.5",
     "d3": "^7.4.4",
     "faker": "^6.6.6",
-    "firebase": "^9.8.3",
+    "firebase": "^9.9.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.2.0",
+    "react-csv": "^2.2.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-firestore": "^1.0.0",
     "redux-logger": "^3.0.6",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
@@ -52,6 +56,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
+    "@types/react-csv": "^1.1.3",
     "@types/redux-logger": "^3.0.9"
   }
 }
