--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,9 +14,11 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "antd": "^4.21.7",
     "d3": "^7.4.4",
     "faker": "^6.6.6",
     "firebase": "^9.9.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.2.0",
